[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/scripts/Control.gd" type="Script" id=1]
[ext_resource path="res://src/assets/Coin/Coin.png" type="Texture" id=2]
[ext_resource path="res://src/assets/Gui/2.png" type="Texture" id=4]
[ext_resource path="res://src/assets/Gui/1.png" type="Texture" id=5]
[ext_resource path="res://src/assets/Gui/3.png" type="Texture" id=6]
[ext_resource path="res://src/assets/Gui/4.png" type="Texture" id=7]
[ext_resource path="res://src/assets/Font/Roboto-Regular.ttf" type="DynamicFontData" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.109804, 1, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 0.72549 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.454902, 1, 0, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=9]
resource_name = "close"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "show"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "finish"
} ]
}

[sub_resource type="Animation" id=10]
resource_name = "open"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hide"
} ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 320.0
margin_bottom = 75.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 40, 105 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="Coin" type="Label" parent="."]
margin_left = 70.0
margin_top = 85.8
margin_right = 305.0
margin_bottom = 120.8
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" type="TouchScreenButton" parent="."]
position = Vector2( 45, 460 )
scale = Vector2( 0.9, 0.9 )
normal = ExtResource( 4 )
pressed = ExtResource( 4 )
passby_press = true
action = "left"

[node name="right" type="TouchScreenButton" parent="."]
position = Vector2( 195, 460 )
scale = Vector2( 0.9, 0.9 )
normal = ExtResource( 5 )
pressed = ExtResource( 5 )
passby_press = true
action = "right"

[node name="up" type="TouchScreenButton" parent="."]
position = Vector2( 845, 460 )
scale = Vector2( 0.9, 0.9 )
normal = ExtResource( 6 )
pressed = ExtResource( 6 )
passby_press = true
action = "up"

[node name="Pause" type="TextureButton" parent="."]
pause_mode = 2
margin_left = 910.0
margin_top = 15.0
margin_right = 1039.0
margin_bottom = 144.0
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="PopupMenu" parent="."]
margin_left = 350.0
margin_top = 150.0
margin_right = 650.0
margin_bottom = 475.0
custom_styles/panel = SubResource( 4 )

[node name="Resume" type="Button" parent="Options"]
pause_mode = 2
margin_left = 25.0
margin_top = 25.0
margin_right = 275.0
margin_bottom = 100.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.454902, 1, 0, 1 )
text = "Resume"

[node name="Restart" type="Button" parent="Options"]
pause_mode = 2
margin_left = 25.0
margin_top = 125.0
margin_right = 275.0
margin_bottom = 200.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.454902, 1, 0, 1 )
text = "Restart"

[node name="MainMenu" type="Button" parent="Options"]
pause_mode = 2
margin_left = 25.0
margin_top = 225.0
margin_right = 275.0
margin_bottom = 300.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.454902, 1, 0, 1 )
text = "Main Menu"

[node name="TextureRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureRect"]
anims/close = SubResource( 9 )
anims/open = SubResource( 10 )
[connection signal="pressed" from="Pause" to="." method="_on_Pause_pressed"]
[connection signal="pressed" from="Options/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Options/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Options/MainMenu" to="." method="_on_MainMenu_pressed"]
